--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>FleetioVin</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html ng-app="Fleetio">
+	<head>
+	  <title>FleetioVin</title>
+	  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+	  <%= csrf_meta_tags %>
+	</head>
 
-<%= yield %>
+	<body>
 
-</body>
+		<div class="navbar navbar-fixed-top navbar" role="navigation">
+	    <div class="container">
+	      <div class="navbar-header">
+	        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	          <span class="icon-bar"></span>
+	        </button>
+	        <a class="navbar-brand" href="#">Project name</a>
+	      </div>
+	      <div class="collapse navbar-collapse">
+	        <ul class="nav navbar-nav">
+	          <li class="active"><a href="#">Home</a></li>
+	          <li><a href="#about">About</a></li>
+	          <li><a href="#contact">Contact</a></li>
+	        </ul>
+	      </div><!-- /.nav-collapse -->
+	    </div><!-- /.container -->
+	  </div><!-- /.navbar -->
+
+    <div class="container">
+
+      
+    	<%= yield %>
+
+      <hr>
+
+      <footer>
+        <p>&copy; Company 2013</p>
+      </footer>
+
+    </div><!--/.container-->
+
+
+	</body>
 </html>
