--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,12 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand" href="#">Project name</a>
+	        <a class="navbar-brand" href="<%= root_path %>">VIN Decoder</a>
 	      </div>
 	      <div class="collapse navbar-collapse">
 	        <ul class="nav navbar-nav">
-	          <li class="active"><a href="#">Home</a></li>
-	          <li><a href="#about">About</a></li>
-	          <li><a href="#contact">Contact</a></li>
+	          <li class="active"><a href="<%= root_path %>">Home</a></li>
+	          <li><a href="<%= vehicles_path %>"><%= Vehicle.model_name.human(count: 2) %></a></li>
 	        </ul>
 	      </div><!-- /.nav-collapse -->
 	    </div><!-- /.container -->
