--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,7 +1,8 @@
 body{
 	padding-top: 				130px;
 	background-color: 	#ededed;
-	font-family: Scala, serif !important;
+	font-family: 				Scala, serif !important;
+	color: 							#485667 !important;
 }
 
 h2{
@@ -21,7 +22,29 @@ div.col-white{
 	background-color: 	#fff;
 	border-bottom: 			1px solid #d8d7d9;
 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-	height: 55px;
+	-moz-box-shadow: 		0 1px 4px rgba(0, 0, 0, 0.065);
+	box-shadow: 				0 1px 4px rgba(0, 0, 0, 0.065);
+	height: 						55px;
+}
+
+ul.table {
+	padding-left: 			0;
+}
+
+ul.table li{
+	padding: 						5px 5px 5px 5px;
+	list-style: 				none;
+	border-bottom: 			1px solid #d8d7d9;
+	margin-bottom: 			10px;
+	margin-left: 				0;
+}
+
+a{
+	color:							#de5e42;
+	text-decoration: 		none;
+}
+
+a:hover {
+	color:							#de5e42;
+	text-decoration: 		underline;
 }
