hide details div if empty

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
     <br /><br />
     &nbsp;
 
-    <div class="col-xs-12 col-sm-6 col-md-12 col-white">
+    <div class="col-xs-12 col-sm-6 col-md-12 col-white" ng-hide="!lastVehicle">
       <h2>{{lastVehicle.full_name}}</h2>
       <table>
         <tr>
