--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -1,27 +1,42 @@
 <div class="row" ng-controller="VehicleCtrl">
   <div class="col-xs-12 col-sm-6 col-md-12 col-white">
     <h2><%= Vehicle.model_name.human(count: 2) %></h2>
+
+    <div class="clearfix">
+      <div class="pull-right">
+        <div>{{pageInfo()}}</div>
+      </div>
+    </div>
+    <br/>
+
     <ul class="table">
       <li ng-repeat="vehicle in vehicles | orderBy:'id':true">
-        <!-- <a href ng-click="expandVehicle(vehicle)">{{vehicle.full_name}}</a> -->
         <h3>{{vehicle.full_name}}</h3>
         <div class="vehicle-details"><a href ng-click="deleteVehicle(vehicle)">Destroy</a></div>
       </li>
     </ul>
 
-    <ul class="pagination pull-right">
-      <li ng-class="{disabled: currentPage == 1}">
-        <a href ng-click="previousPage()">« Prev</a>
-      </li>
-      <li ng-repeat="n in [] | range:total_pages"
-        ng-class="{active: n == currentPage - 1}"
-        ng-click="setPage(n + 1)">
-        <a href ng-bind="n + 1">1</a>
-      </li>
-      <li ng-class="{disabled: currentPage == total_pages}">
-        <a href ng-click="nextPage()">Next »</a>
-      </li>
-    </ul>
+    <div class="clearfix">
+      <div class="pull-right">
+
+        <div class="pull-right">{{pageInfo()}}</div>
+        <div class="clearfix"></div>
+        <ul class="pagination">
+          <li ng-class="{disabled: currentPage == 1}">
+            <a href ng-click="previousPage()">« Prev</a>
+          </li>
+          <li ng-repeat="n in [] | range:totalPages"
+            ng-class="{active: n == currentPage - 1}"
+            ng-click="setPage(n + 1)">
+            <a href ng-bind="n + 1">1</a>
+          </li>
+          <li ng-class="{disabled: currentPage == totalPages}">
+            <a href ng-click="nextPage()">Next »</a>
+          </li>
+        </ul>
+      </div>
+
+    </div>
 
   </div>
 </div>
