--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,16 +35,8 @@
 
     <div class="col-xs-12 col-sm-6 col-md-12 col-white" ng-hide="!lastVehicle">
       <h2>{{lastVehicle.full_name}}</h2>
-      <table>
-        <tr>
-          <td><%= Vehicle.human_attribute_name(:transmission_type) %></td>
-          <td>{{lastVehicle.transmission_type}}</td>
-        </tr>
-
-        <tr>
-          <td><%= Vehicle.human_attribute_name(:engine_type) %></td>
-          <td>{{lastVehicle.engine_type}}</td>
-        </tr>
+      <table class="vehicle-details">
+        <%= vehicle_details_table %>
       </table>
       <p></p>
     </div><!--/span-->
