added front end work for tco tooltips

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <%= google_maps_include %>
 
-<div class="row">
-
-</div><!--/row-->
-
-<br/>
+<script type="text/javascript">
+$(document).ready(function(){
+  $('.bootstrap-tooltip').tooltip();
+});
+</script>
 
 <div class="row" ng-controller="VehicleCtrl">
 
