--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,21 +11,21 @@ $(document).ready(function(){
   <div class="col-xs-12 col-sm-6 col-md-8">
 
     <div class="col-xs-12 col-sm-6 col-md-12 col-white">
-      <h2>VIN Search</h2>
+      <h2><%= t "pages.vin_search" %></h2>
       <p>
         <div>
           <form ng-submit="searchByVin()">
             <%= tag(:input, :type => "hidden", :name => request_forgery_protection_token.to_s, :value => form_authenticity_token) %> 
 
             <div class="form-group">
-              <input type="text" class="form-control" id="vehicle_search" placeholder="Enter VIN" ng-model="newVehicle.vin">
+              <input type="text" class="form-control" id="vehicle_search" placeholder="<%= t 'pages.search_text' %>" ng-model="newVehicle.vin">
             </div>
 
             <div ng-repeat="error_message in vinErrors">
               <div class="alert alert-danger">{{error_message}}</div>
             </div>
 
-            <input type="submit" class="btn btn-primary" values="Search"/>
+            <input type="submit" class="btn btn-primary" value="<%= t 'pages.submit' %>" />
           </form>
         </div>
       </p>
@@ -45,7 +45,7 @@ $(document).ready(function(){
   </div>
 
   <div class="col-xs-12 col-sm-6 col-md-4 col-white">
-    <h2>Recent Searches</h2>
+    <h2><%= t "pages.recent_searches" %></h2>
     <ul class="table small">
       <li ng-repeat="vehicle in vehicles | orderBy:'id':true | limitTo:5">
         <a href ng-click="expandVehicle(vehicle)">{{vehicle.full_name}}</a>
