--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,21 @@
 	          <span class="icon-bar"></span>
 	          <span class="icon-bar"></span>
 	        </button>
-	        <a class="navbar-brand" href="<%= root_path %>">VIN Decoder</a>
+	        <a class="navbar-brand" href="<%= root_path %>"><%= t "app_name" %></a>
 	      </div>
 	      <div class="collapse navbar-collapse">
 	        <ul class="nav navbar-nav">
-	          <li class="active"><a href="<%= root_path %>">Home</a></li>
+	          <li class="active"><a href="<%= root_path %>"><%= t("menu.home") %></a></li>
 	          <li><a href="<%= vehicles_path %>"><%= Vehicle.model_name.human(count: 2) %></a></li>
+						<li class="dropdown">
+			        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+			        	<%= t("menu.language") %> (<%= I18n.locale.upcase %>)<b class="caret"></b>
+			        </a>
+			        <ul class="dropdown-menu">
+			          <li><a href="<%= home_set_locale_path %>?locale=en">English</a></li>
+			          <li><a href="<%= home_set_locale_path %>?locale=es">Español</a></li>
+			        </ul>
+			      </li>
 	        </ul>
 	      </div><!-- /.nav-collapse -->
 	    </div><!-- /.container -->
