move vehicle deletion confirmation to its own method in angular

--- a/app/views/vehicles/index.html.erb
+++ b/app/views/vehicles/index.html.erb
@@ -25,7 +25,7 @@
 
         <td class="last">
           <a data-toggle="modal" href="#vehicle-details-modal" ng-click="setLastVehicle(vehicle)"><%= t "pages.actions.details" %></a> |
-          <a href ng-click="deleteVehicle(vehicle, '<%= t "pages.actions.confirm" %>')" >
+          <a href ng-click="confirmDeletion(vehicle, '<%= t "pages.actions.confirm" %>')" >
             <%= t "pages.actions.destroy" %>
           </a>
         </td>
