--- a/app/views/vehicles/_details_modal.html.erb
+++ b/app/views/vehicles/_details_modal.html.erb
@@ -13,7 +13,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal"><%= t "pages.actions.close" %></button>
         <button type="button" class="btn btn-danger" 
-          ng-click="deleteVehicle(lastVehicle, '<%= t "pages.actions.confirm" %>', true)" data-dismiss="modal">
+          ng-click="confirmDeletion(lastVehicle, '<%= t "pages.actions.confirm" %>', true)" data-dismiss="modal">
           <%= t "pages.actions.destroy" %>
         </button>
       </div>
